--- a/bloggo/templates/base.html
+++ b/bloggo/templates/base.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav>
-            <h1>Blog</h1>
+            <h1><a href="{{ url_for('blog.index') }}">Blog</a></h1>
             <ul>
                 {% if g.user %}
                 <li><span>{{ g.user['username'] }}</span>
