--- a/bloggo/templates/blog/index.html
+++ b/bloggo/templates/blog/index.html
@@ -19,7 +19,11 @@
           <a class="action" href="{{ url_for('blog.update', id=post.id) }}">Edit</a>
         {% endif %}
       </header>
-      <p class="body">{{ post.body }}</p>
+      <p class="body">{{ post.body|truncate(600) }}
+      {% if post.body|length > 600 %}
+        <a href="{{ url_for('blog.view', id=post.id) }}">read more -></a>
+      {% endif %}
+      </p>
     </article>
     {% if not loop.last %}
       <hr>
